Find references code lens, room for optimization